@@ -1,3 +1,7 @@
+Wed Jun 10 20:54:07 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/convert_tds2sql.c src/odbc/odbc.c src/odbc/odbc_util.c:
+	- move blob check to odbc_tds2sql
+
 Wed Jun 10 18:44:48 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/ct.c: limit indentation
 
@@ -1638,4 +1642,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2811 2009/06/10 16:44:56 freddy77 Exp $
+$Id: ChangeLog,v 1.2812 2009/06/10 18:54:38 freddy77 Exp $
